objects/TSS_Rule__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether or not this TSS Rule is active.  Only active rules will be used by the TSS Engine when attempting to match Postal Codes.</description>
        <inlineHelpText>Indicates whether or not this TSS Rule is active.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>RegEx_String__c</fullName>
        <label>RegEx String</label>
        <length>10240</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The order in which this TSS Rule should be processed, relative to the other TSS Rules that are defined for the same Country.  This value should not be exposed to users unless rule sequencing features are implemented.</description>
        <inlineHelpText>The order in which this TSS Rule should be processed, relative to the other TSS Rules that are defined for the same Country.</inlineHelpText>
        <label>Sequence</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <description>The name of the Territory that this TSS Rule is a match for.  This name must EXACTLY match the corresponding Picklist value for the Territory__c field on the Account object.</description>
        <inlineHelpText>The name of the Territory that this TSS Rule is a match for.</inlineHelpText>
        <label>Territory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ACT - 1</fullName>
                </value>
                <value>
                    <fullName>ACT - 2</fullName>
                </value>
                <value>
                    <fullName>ACT - All</fullName>
                </value>
                <value>
                    <fullName>Alberta</fullName>
                </value>
                <value>
                    <fullName>British Columbia</fullName>
                </value>
                <value>
                    <fullName>Calgary</fullName>
                </value>
                <value>
                    <fullName>Central Midlands</fullName>
                </value>
                <value>
                    <fullName>East Anglia</fullName>
                </value>
                <value>
                    <fullName>East London</fullName>
                </value>
                <value>
                    <fullName>East Midlands</fullName>
                </value>
                <value>
                    <fullName>East Ontario</fullName>
                </value>
                <value>
                    <fullName>East Toronto</fullName>
                </value>
                <value>
                    <fullName>Edmonton</fullName>
                </value>
                <value>
                    <fullName>Edmonton/Calgary</fullName>
                </value>
                <value>
                    <fullName>GTA</fullName>
                </value>
                <value>
                    <fullName>GTA North</fullName>
                </value>
                <value>
                    <fullName>GTA West</fullName>
                </value>
                <value>
                    <fullName>Hamilton-Niagara</fullName>
                </value>
                <value>
                    <fullName>Montreal</fullName>
                </value>
                <value>
                    <fullName>North East</fullName>
                </value>
                <value>
                    <fullName>North East/Ireland</fullName>
                </value>
                <value>
                    <fullName>North Vancouver</fullName>
                </value>
                <value>
                    <fullName>North West</fullName>
                </value>
                <value>
                    <fullName>NSW - 1</fullName>
                </value>
                <value>
                    <fullName>NSW - 2</fullName>
                </value>
                <value>
                    <fullName>NSW - 3</fullName>
                </value>
                <value>
                    <fullName>NSW - 4</fullName>
                </value>
                <value>
                    <fullName>NSW - 5</fullName>
                </value>
                <value>
                    <fullName>NSW - 6</fullName>
                </value>
                <value>
                    <fullName>NSW - 7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Country__c</columns>
        <columns>RegEx_String__c</columns>
        <columns>Notes__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Australia_Rules</fullName>
        <columns>NAME</columns>
        <columns>Is_Active__c</columns>
        <columns>Region__c</columns>
        <columns>Country__c</columns>
        <columns>Territory__c</columns>
        <columns>RegEx_String__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Australia</value>
        </filters>
        <label>Australia Rules</label>
    </listViews>
    <listViews>
        <fullName>Canada_Rules</fullName>
        <columns>NAME</columns>
        <columns>Is_Active__c</columns>
        <columns>Region__c</columns>
        <columns>Country__c</columns>
        <columns>Territory__c</columns>
        <columns>RegEx_String__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Canada</value>
        </filters>
        <label>Canada Rules</label>
    </listViews>
    <listViews>
        <fullName>UK_Rules</fullName>
        <columns>Is_Active__c</columns>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Country__c</columns>
        <columns>Territory__c</columns>
        <columns>RegEx_String__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>United Kingdom</value>
        </filters>
        <label>UK Rules</label>
    </listViews>
</CustomObject>